--- a/CustomView/app/src/main/res/values/strings.xml
+++ b/CustomView/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CustomView</string>
     <string name="dispatch">DispatchActivity</string>
     <string name="text">TextActivity</string>
+    <string name="viewpager">InfiniteViewPager</string>
 </resources>
