实现弹出框覆盖在Activity之上的一部分且可以操作其它部分

--- a/CustomView/app/src/main/res/values/strings.xml
+++ b/CustomView/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">CustomView</string>
+    <string name="app_name">自定义View</string>
     <string name="dispatch">DispatchActivity</string>
     <string name="text">TextActivity</string>
     <string name="viewpager">InfiniteViewPager</string>
